applications/integration/networking/access/http/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dashboard-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 100
      protocol: HTTP
    hosts:
    - "kubeflow.oss"
    - "minio.kubeflow.oss"
    - "mlflow.oss"
    - "minio.mlflow.oss"
    - "prometheus.oss"
    - "grafana.oss"
    - "mongo.oss"
    - "qdrant.oss"
    - "neo4j.oss"
    - "forwarder.frontend.oss"
    - "forwarder.monitor.oss"
    - "kiali.oss"
    - "ray.main.oss"
    - "ray.local-1.oss"
    - "ray.local-2.oss"
    - "ray.local-3.oss"
    - "ray.puhti.oss"
    - "ray.mahti.oss"
    - "ray.lumi.oss"
