applications/integration/networking/access/http/forwarder-monitor-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: forwarder-monitor-virtualservice
spec:
  hosts:
  - "forwarder.monitor.oss"
  gateways:
  - dashboard-gateway
  http:
  - route:
    - destination:
        host: flower-service.forwarder.svc.cluster.local
        port:
          number: 6501
