applications/integration/networking/access/http/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-virtualservice
spec:
  hosts:
  - "grafana.oss"
  gateways:
  - dashboard-gateway
  http:
  - route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 3000
