applications/integration/networking/access/http/kubeflow-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubeflow-virtualservice
spec:
  hosts:
  - "kubeflow.oss"
  gateways:
  - dashboard-gateway
  http:
  - route:
    - destination:
        host: ml-pipeline-ui.kubeflow.svc.cluster.local
        port:
          number: 80
