applications/integration/networking/access/http/mongo-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mongo-virtualservice
spec:
  hosts:
  - "mongo.oss"
  gateways:
  - dashboard-gateway
  http:
  - route:
    - destination:
        host: express-service.storage.svc.cluster.local
        port:
          number: 7200
