applications/integration/networking/access/http/neo4j-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: neo4j-virtualservice
spec:
  hosts:
  - "neo4j.oss"
  gateways:
  - dashboard-gateway
  http:
  - route:
    - destination:
        host: neo4j.storage.svc.cluster.local
        port:
          number: 7474
